Added suggestions by Jakub
Signed-off-by: ShubhamRwt <shubhamrwt02@gmail.com>